--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -725,6 +725,15 @@ Y = t(k)
 \note[item]{The first check is to match the head of the two terms \prologConstruct{k}, next the arity and finally \prologConstruct{X} and
 \prologConstruct{Y} are instantiated.}
 
+\item  Unification is not always easy\dots
+
+\begin{minted}[linenos,gobble=2]{prolog}
+  h(f(W),S,g(U,y)) = h(U,V,g(f(x),V))
+  W=x
+  U=f(x)
+  S=V=y
+\end{minted}
+
 \end{itemize}
 	
 \end{frame} 
