fixes to Merging Paradigms.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -495,11 +495,13 @@ Implementing a language within another language.
 
 
 %% -------------------------------------------------------------------
-\begin{frame}
+\begin{frame}{Merging Paradigms}
 \note[item]{In this section we talk about languages that exhibit properties from multiple paradigms.}
-\frametitle{Merging Paradigms}
 \begin{itemize}
-\item Combining different programming paradigms or programming styles into a single environment resulting in a hybrid language.
+\item
+  Merging paradigms means combining different programming paradigms or
+  programming styles into a single environment resulting in a hybrid
+  language. 
 \note[item]{Attemp to combine properties(many a times conflicting in nature) of languages and/or paradigms }
 
 \item The idea of a multi paradigm language is to provide a framework in which programmers can work in a variety of styles, freely
