Fixes to functional logic programming languages.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -513,16 +513,17 @@ intermixing constructs from different paradigms.
 \note[item]{A notable example is \progLang{Scala}, object functional language based on \progLang{Java}. Simply put it is Java with strong 
 	functional characteristics such as higher order functions. Twitter is written in \progLang{Scala}.}
 
-\item Functional Logic programming languages.
+\item Functional Logic programming languages include:
 \note[item]{are hybrid declarative languages exhibiting functional and logic programming languages.}
 
-\item For example, \progLang{Curry}.
-\note[item]{is a \progLang{Haskell} based functional logic programming language providing the choice operator for non deterministic
-	operations along with two way pattern matching.}
+\begin{itemize}
+\item \progLang{Curry},
+  \note[item]{is a \progLang{Haskell} based functional logic programming language providing the choice operator for non deterministic
+    operations along with two way pattern matching.}
 
-\item Other examples, \progLang{Mercury}.
-\note[item]{which goes the other way round, starting from \progLang{Prolog} and adding \progLang{Haskell} features.}
-
+\item \progLang{Mercury}.
+  \note[item]{which goes the other way round, starting from \progLang{Prolog} and adding \progLang{Haskell} features.}
+\end{itemize}
 \end{itemize}
 
 \end{frame}
