fix to monadic bubble.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -649,7 +649,7 @@ capabilities.}
 \item A monad is a structure that represents computations defined as sequences of steps.
 \note[item]{Computations are a sequence of steps chained together.}
 
-\item The monadic bubble.
+\item Monadic computations take place in a ``bubble.''
 \note[item]{Computations that produce side effects are carried out in a monad, a bubble, which prevents the outer state to get affected 
 and hence the computation remains.}
 
