fix to pattern matching.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -664,6 +664,8 @@ and hence the computation remains.}
 
 \frametitle{Pattern Matching}
 \begin{itemize}
+\item Pattern matching is a feature of \progLang{Haskell} (and other
+  similar languages).
 \item In pattern matching, we attempt to match values against patterns and, if so desired, bind variables to successful matches.
 \note[item]{In pattern matching, we matry and match values against patterns to bind values to variables.}
 \note[item]{Pattern matching can either fail, succeed or diverge.}
