--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -984,32 +984,33 @@ direction for solving the problem of embedding languages.}
 \end{frame}
 %% -------------------------------------------------------------------
 
+%% -------------------------------------------------------------------
 \begin{frame}[fragile=singleslide]
-	\frametitle{{Functorizing a language}}
-	\begin{itemize}
-		
-		\item Manual extension,
-		\begin{minted}[linenos]{haskell}
-		data Term = Struct Atom [Term]
-		| Var VariableName
-		| Wildcard
-		| Cut Int
-		| New_Constructor_1 .........
-		| New_Constructor_2 ......... 
-		deriving (Eq, Data, Typeable, .....)
-		\end{minted}
-		\note[item]{A manual extension would result in modying the base language and the operations related to it.}
-		
-		\item Functorized Extension,
-		\begin{minted}[linenos]{haskell}
-		data Extended f = New_Constructor_1 ...
-		| New_Constructor_2 ....
-		| Base (f (Extended f)) 
-		deriving (Eq, Data, Typeable, .....)
-		\end{minted}
-		\note[item]{Meanwhile, for the open language, a quantifier such as \haskellConstruct{Extended} can be used. }
-	\end{itemize}
+    \frametitle{{Functorizing a language}}
+    \begin{itemize}
+        \item Manual extension,
+        \begin{minted}[linenos,gobble=8]{haskell}
+        data Term = Struct Atom [Term]
+                  | Var VariableName
+                  | Wildcard
+                  | Cut Int
+                  | New_Constructor_1 .........
+                  | New_Constructor_2 ......... 
+             deriving (Eq, Data, Typeable, .....)
+       \end{minted}
+        \note[item]{A manual extension would result in modying the base language and the operations related to it.}
+        
+        \item Functorized Extension,
+        \begin{minted}[linenos,gobble=8]{haskell}
+        data Extended f = New_Constructor_1 ...
+                        | New_Constructor_2 ....
+                        | Base (f (Extended f)) 
+             deriving (Eq, Data, Typeable, .....)
+        \end{minted}
+        \note[item]{Meanwhile, for the open language, a quantifier such as \haskellConstruct{Extended} can be used. }
+    \end{itemize}
 \end{frame}
+%% -------------------------------------------------------------------
 
 \begin{frame}
 	\frametitle{Monadic Unification}
