Polished content in Conclusion.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1210,20 +1210,8 @@ to be of different types.}
 \section{Conclusion}
 %% ---------------------------------------------------------------------
 \begin{frame}{Conclusion}
-\note[item]{In conclusion, we set out to explore the various approaches for bringing languages together}
-\begin{itemize}
-\item Embedded domain specific language in \progLang{Haskell}.
-\note[item]{support for eDSL's \progLang{Haskell}}
-
-\item \progLang{Prolog}-like language which is closer to a \progLang{Prolog} distribution.
-\note[item]{A more "complete" \progLang{Prolog} in \progLang{Haskell}.}
-
-\item Prototype implementations.
-\note[item]{We tested out methodologies for replicating functionalities with some prototypes.}
-
-\item \progLang{Haskell}, an effective tool for embedding domain specific languages.
-\note[item]{\progLang{Haskell}, an effective tool for embedding domain specific languages.}
-\end{itemize}
+In conclusion, we  explored the various approaches for bringing languages together. We looked at the state and support for embedded domain specific languages in \progLang{Haskell}. Specifically, we looked at \progLang{Prolog} in 
+\progLang{Haskell}. Our ideas were tested by the means of some prototypes to find out that \progLang{Haskell} is an effective tool for embedding.  Lastly, we contributed towards solving the programmer's dilemma of choosing programming languages.
 
 \end{frame}
 %% ---------------------------------------------------------------------
