--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -144,8 +144,8 @@
 	\setbeamertemplate{footline}[frame number]
 	\setbeamertemplate{itemize items}[circle]
 	
-	\setbeameroption{show notes} % un-comment to see the notes
-	\setbeameroption{show notes on second screen=right}
+	%\setbeameroption{show notes} % un-comment to see the notes
+	%\setbeameroption{show notes on second screen=right}
 	
 	\begin{frame}
 		\titlepage % Print the title page as the first slide
