--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -144,13 +144,12 @@
 	\setbeamertemplate{footline}[frame number]
 	\setbeamertemplate{itemize items}[circle]
 	
-	%\setbeameroption{show notes} % un-comment to see the notes
-	%\setbeameroption{show notes on second screen=right}
+	\setbeameroption{show notes} % un-comment to see the notes
+	\setbeameroption{show notes on second screen=right}
 	
 	\begin{frame}
 		\titlepage % Print the title page as the first slide
-		\note[item]{Good afternoon everybody. My name is Mehul Solanki. I am a graduate student in the computer science department 
-		under  Dr. David Casperson. And today I would like to talk about embedding \progLang{Prolog} in \progLang{Haskell}.}
+		\note[item]{Good afternoon everybody. My name is Mehul Solanki. And today I would like to talk about embedding \progLang{Prolog} in \progLang{Haskell}.}
 	\end{frame}
 
 %% ====================================================================-
@@ -164,7 +163,7 @@
 \fontsize{10}{7.2}\selectfont
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \note[item]{We will begin with languages and how they are combined.}
-\note[item]{The problem this thesis contributes to.}
+\note[item]{The problem this thesis contributes to and the existing work.}
 \note[item]{Some concepts and the prototype implementations.}
 \note[item]{And lastly, we sum up with possible directions.} 
 \note[item]{So let's get started.}
@@ -182,22 +181,20 @@
 \begin{frame}{Overview}
 To provide background, I will discuss:
 \begin{itemize}
-\note[item]{In this section we will talk about,}
+\note[item]{For the background, we will talk about,}
 \item Programming languages and \progLang{Haskell} and \progLang{Prolog}.
 \note[item]{Programming languages and programming paradigms.}
 \note[item]{along with the languages in question, \progLang{Haskell} and \progLang{Prolog},}
 
 \item Classification.
-\note[item]{How they are classified}
-
 \item Programming paradigms and declarative programming.
-\note[item]{Next paradigms and the declarative stlye of programming in particular,} 
+\note[item]{How they are classified into paradigms depending on their characteristics.}
 
 \item Functional and logic programming.
-\note[item]{and it's sub-paradigms functional and logic programming,}
+\note[item]{the declarative stlye of programming and it's sub-paradigms functional and logic programming in particular,} 
 
 \item Bringing programming languages together.
-\note[item]{lastly the approaches for bringing programming languages together.}
+\note[item]{and the approaches for bringing programming languages together.}
 \end{itemize}
 \end{frame}
 %% -------------------------------------------------------------------
@@ -247,7 +244,7 @@ For example: \textsc{C}, \textsc{Java}.
 \note[item]{is lazy meaning functions don't evaluate their arguments until required.}
 
 \item and is purely functional.
-\note[item]{and is purely funcitonal meaning every function in Haskell is a function in the mathematical sense (i.e., "pure").}
+\note[item]{and is purely functional meaning every function in Haskell is a function in the mathematical sense (i.e., "pure").}
 \end{itemize}
 
     \end{block}
@@ -358,7 +355,7 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \note[item]{It further branches out into functional and logic programming.}
 
 \item Programming in a functional language consists of building definitions and using the computer to evaluate expressions.
-\note[item]{A funcitonal language is all about building and applying functions.}
+\note[item]{A functional language is all about building and applying functions.}
 
 \item In logic programming, a program consists of a collection of statements expressed as formulas in symbolic logic. 
 \note[item]{Logic programming allows a new formula to be derived from the old ones. A logic programming consists of a set of facts and 
@@ -450,7 +447,7 @@ Implementing a language within another language.
 
 \item \codeLibrary{prolog} : A \progLang{Prolog}-like interpreter which can be interacted through a REPL.
 \end{itemize}
- \note[item]{None of these are currently under active development and provide limited funcitonality. }
+ \note[item]{None of these are currently under active development and provide limited functionality. }
  \note[item]{Though we use components from these implementations, they do not utilize the haskellian features that makes life a lot simpler as we shall see.}
 
 \item Logic programming in \progLang{Haskell}.
@@ -539,7 +536,7 @@ intermixing constructs from different paradigms.
 
 \begin{itemize}
 \item For example, "Clarissa", a voice user interface for browsing procedures on the International Space Station.
-	\note[item]{For instance, \progLang{Prolog} is good for rule based systems. "Clarissa", a voice user interface for browsing space station procedures is written in SICStus
+	\note[item]{For instance, \progLang{Prolog} is often seen as a special purpose language, being effective for rule based systems. For this reason it was chosen to implement "Clarissa", a voice user interface for browsing space station procedures is written in SICStus
 		Prolog[https://ti.arc.nasa.gov/m/pub-archive/999h/0999\%20\%28Rayner\%29.pdf].}
 	\note[item]{Simply speaking, it is like "siri" for the International Space Station.}
 \end{itemize}
@@ -556,7 +553,7 @@ intermixing constructs from different paradigms.
 \note[item]{Choosing a language is quite a daunting task. There are costs related to migration, training among others.}
 
 \item Replicating functionality.
-\note[item]{One option is to replicate the target language funcitonality in the current environment, and that is what we will look at 
+\note[item]{One option is to replicate the target language functionality in the current environment, and that is what we will look at 
 today. Replicating \progLang{Prolog}-like functionality in \progLang{Haskell}}
 \note[item]{The result is something close to a \textit{haskellised} \progLang{Prolog}, a functional eDSl with logic programming 
 capabilities.}
@@ -585,13 +582,13 @@ capabilities.}
    \begin{block}{Thesis statement}
      The thesis aims to provide insights into merging two declarative
      languages namely, \progLang{Haskell} and \progLang{Prolog} by
-     embedding the latter into the former and analyzing the result of
+     embedding the latter into the former and analysing the result of
      doing so\dots\,.
      \note[item]{\textcolor{red}{Read out Thesis statement.}}
    \end{block}
         \begin{itemize}
       \item Replicating functionality.
-      \note[item]{One option is to replicate the target language funcitonality in the current environment,}
+      \note[item]{One option is to replicate the target language functionality in the current environment,}
       
       \item \progLang{Prolog}-like functionality in \progLang{Haskell}.
       \note[item]{, and that is what we will look at today. Replicating \progLang{Prolog}-like functionality in \progLang{Haskell}}
@@ -628,7 +625,7 @@ capabilities.}
 
 \item Monadic computations take place in a ``bubble.''
 \note[item]{Computations that produce side effects are carried out in a monad, a bubble, which prevents the outer state to get affected 
-and hence the computation remains.}
+and hence the computation remains pure.}
 
 \end{itemize}
 
@@ -687,7 +684,7 @@ the variable instantiations are compatible.
 %% -------------------------------------------------------------------
 \begin{frame}[fragile] 
 \frametitle{Unification Examples} 
-\note[item]{Let us take a look at a few examples,}
+\note[item]{Let us take a look at a few examples. In these examples like in \progLang{Prolog} variables are capital letters.}
 \begin{itemize}
 \item Unifying variables,
 
@@ -696,7 +693,8 @@ the variable instantiations are compatible.
 X = 1. 
 Y = 2.  
 \end{minted}
-\note[item]{In the first example, \prologConstruct{X} is instantiated to 1 and \prologConstruct{Y} to 2.}
+\note[item]{In the first example, what values must \prologConstruct{X} and \prologConstruct{Y} have for the left and right hand side to be equal.}
+\note[item]{After unification, \prologConstruct{X} is instantiated to 1 and \prologConstruct{Y} to 2.}
 
 \item  Unifying complex terms,
 
@@ -705,14 +703,15 @@ k(s(g),Y) = k(X,t(k)).
 X = s(g) 
 Y = t(k) 
 \end{minted} 
-\note[item]{The first check is to match the head of the two terms \prologConstruct{k}, next the arity and finally \prologConstruct{X} and
-\prologConstruct{Y} are instantiated.}
+\note[item]{The second example looks complicated but is essentially the same as example 1.}
 
 \item  Unification is not always easy\dots
 
 \begin{minted}[linenos,gobble=2]{prolog}
   h(f(W),S,g(U,y)) = h(U,V,g(f(x),V))
 \end{minted}
+\note[item]{}
+
 \dots
 
 \end{itemize}
@@ -952,7 +951,7 @@ direction for solving the problem of embedding languages.}
 
 %% ====================================================================-
 \subsection{Prototype 1}
-
+\note[item]{We will now talk about elements of Prototype 1}
 %% -------------------------------------------------------------------
 \begin{frame}[fragile=singleslide]
     \frametitle{{Functorizing a language}}
@@ -969,6 +968,7 @@ direction for solving the problem of embedding languages.}
                     | Wildcard
                     | Cut Int deriving (Eq, Data, Typeable)
         \end{minted}
+        \note[item]{Because \haskellConstruct{Term} is on the left and right hand side, the grammar is data type.}
         \note[item]{Our expressions can only be  built using \progLang{Term} and nothing else.}
         
       \item Open language:
@@ -978,14 +978,16 @@ direction for solving the problem of embedding languages.}
                           |  Wildcard
                           |  Cut Int deriving (Show, Eq, Ord)
         \end{minted}
-        \note[item]{On the other hand, due to the addition of the type variable \haskellConstruct{a}, functionality can be injected into the language. }
+        \note[item]{On the other hand, due to the addition of the type variable \haskellConstruct{a}, functionality can be injected into the language.}
+        \note[item]{Note, that \haskellConstruct{FlatTerm} does not occur on the right hand side.}
     \end{itemize}
     
 \end{frame}
 %% -------------------------------------------------------------------
 
 %% -------------------------------------------------------------------
-\begin{frame}[fragile=singleslide]
+\begin{comment}
+	\begin{frame}[fragile=singleslide]
     \frametitle{{Functorizing a language}}
     \begin{itemize}
         \item Manual extension,
@@ -1010,11 +1012,13 @@ direction for solving the problem of embedding languages.}
         \note[item]{Meanwhile, for the open language, a quantifier such as \haskellConstruct{Extended} can be used. }
     \end{itemize}
 \end{frame}
+\end{comment}
 %% -------------------------------------------------------------------
 
 \begin{frame}
 	\frametitle{Monadic Unification}
-	\note[item]{Here, we make use of the \codeLibrary{unification-fd} library }
+	\note[item]{Here, we make use of the \codeLibrary{unification-fd} library. This is a general purpose library which we adapt for our prototypes. It provides highly efficient algorithms for unification in \progLang{Haskell} by hiding imperative calculations in a monad.}
+	
 	\begin{itemize}
 		\item \codeLibrary{unification-fd} compatible
 		\note[item]{Here, we make use of the \codeLibrary{unification-fd} library for providing the generic unification algorithm.}
@@ -1026,7 +1030,7 @@ direction for solving the problem of embedding languages.}
 		\note[item]{Convert the terms into \haskellConstruct{UTerm}}
 		
 		\item Extract and convert variables to become \haskellConstruct{State} compatible,
-		\note[item]{the language varaibles are comnverted to state varaibles which store, pass and mutate values.}
+		\note[item]{the language varaibles are converted to state varaibles which store, pass and mutate values.}
 		
 		\item Carry out unification in the \haskellConstruct{Binding Monad}.
 		\note[item]{The variables are bound to values representing substituions}
@@ -1054,7 +1058,7 @@ direction for solving the problem of embedding languages.}
 
 %% ====================================================================-
 \subsection{Prototype 2}
-
+\note[item]{We will now talk about elements of Prototype 2}
 \begin{frame}
 \frametitle{Contributions}
 \note[item]{For a logic programming language,}
@@ -1102,7 +1106,7 @@ accommodate an open grammar for the language and monadic unification.}
 
 %% ====================================================================-
 \subsection{Prototype 3}
-
+\note[item]{We will now talk about elements of Prototype 3}
 \begin{frame}
 \frametitle{Contributions}
 \note[item]{Prototype 2 demonstrated how the procedure can be applied to recursive grammars and carry out unification irrespective of the scheduling policy of the interpreter.}
@@ -1136,7 +1140,7 @@ accommodate an open grammar for the language and monadic unification.}
 
 %% ====================================================================-
 \subsection{Prototype 4}
-
+\note[item]{We will now talk about elements of Prototype 4}
 \begin{frame}
 \frametitle{Contributions}
 
@@ -1146,7 +1150,7 @@ accommodate an open grammar for the language and monadic unification.}
 
 \item Constructors for IO operations in the abstract syntax.
 \note[item]{By defining constructors for IO operations in the language itself.}
-\note[item]{one reason why this can be done is that funcitons in \progLang{Haskell} are first class citizens; they are data.}
+\note[item]{one reason why this can be done is that functions in \progLang{Haskell} are first class citizens; they are data.}
 
 \item Interpreted program is pure.
 \note[item]{upon interpretation the program is still pure as no actions has been executed.}
